# gtm-container-audit-cleanup

./: .gitignore  README.md  SKILL.md  pyproject.toml
agents/: openai.yaml
references/: audit-ga4-ecommerce.md  audit-media-vendors.md  audit-rubric.md  completion-gates.md  container-json-guide.md  forward-test-prompts.md  import-json-policy.md  limited-audit-protocol.md  mutation-playbook.md  operation-schema.md  optimization-patterns.md  policy-register.md  report-templates.md  runtime-qa-templates.md  semantic-logic-checks.md  semantic-model-protocol.md  source-map.md  vendor-playbooks.md
scripts/: build_skill_package.py  check_release.py  gtm_architecture_review.py  gtm_audit_gate_check.py  gtm_audit_package_build.py  gtm_audit_package_check.py  gtm_baseline_audit.py  gtm_change_log_build.py  gtm_configuration_facts.py  gtm_configuration_review.py  gtm_consent_model.py  gtm_context_model.py  gtm_custom_code_extract.py  gtm_diff_operations.py  gtm_export_inspect.py  gtm_findings_reconcile.py  gtm_future_state_check.py  gtm_human_rows.py  gtm_lib.py  gtm_make_merge_patch.py  gtm_make_name_preserving_review_patch.py  gtm_operation_compile.py  gtm_operational_review.py  gtm_privacy.py  gtm_privacy_scan.py  gtm_relationships.py  gtm_review_common.py  gtm_review_shards.py  gtm_self_test.py  gtm_semantic_review.py  gtm_semantic_source_scan.py  gtm_shared_facts.py  gtm_source_model.py  gtm_taxonomy.py  gtm_three_run_gate.py  gtm_validate_artifact.py  gtm_vendor_registry.py  gtm_workbook.py  gtm_workbook_build.py  release_blocklist.txt
tests/: test_adversarial.py  (+2 more)
(+40 files in other folders)
