[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "gtm-container-audit-cleanup"
version = "2026.7.10"
description = "Agent-neutral GTM cleanup intelligence and deterministic audit tooling"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
analysis = ["esprima>=4.0.1", "openpyxl>=3.1.2"]
dev = ["ruff>=0.12.0"]

[tool.setuptools]
packages = []

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["scripts"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "UP", "SIM"]
