[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "gtm-container-audit-cleanup"
version = "1.2.0"
description = "Agent-neutral GTM web-analyst audit and cleanup tooling"
readme = {text = "Container-only GTM web-analyst audit and cleanup tooling.", content-type = "text/plain"}
license = "MIT"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
analysis = ["esprima>=4.0.1", "openpyxl>=3.1.2"]
dev = ["coverage>=7.6.0", "ruff>=0.12.0", "vulture>=2.14"]

[tool.setuptools]
packages = []

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["scripts"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "UP", "SIM"]
